--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Custom app colors -->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#FF828282</color>
     <color name="accent">#FFFE2C55</color>
-    <color name="background">#FFFFFFFF</color>
-    <color name="surface">#FFF7F7F7</color>
     <color name="text_primary">#FF000000</color>
     <color name="text_secondary">#FF828282</color>
     <color name="border">#FFE6E6E6</color>
@@ -29,7 +28,7 @@
     <color name="onErrorContainer">#FF410E0B</color>
     <color name="background">#FFFFFFFF</color>
     <color name="onBackground">#FF1C1B1F</color>
-    <color name="surface">#FFFFFFFF</color>
+    <color name="surface">#FFF7F7F7</color>
     <color name="onSurface">#FF1C1B1F</color>
     <color name="surfaceVariant">#FFE7E0EC</color>
     <color name="onSurfaceVariant">#FF49454F</color>
